fix scrollbar

--- a/src/styles/blocks/page/page.sass
+++ b/src/styles/blocks/page/page.sass
@@ -23,17 +23,3 @@
             +tablet
                 top: 5rem
                 height: calc(100vh - 80px)
-
-    // &_hide-main
-    //     .main
-    //         +mobile
-    //             display: none
-    // &_hide-footer
-    //     .footer
-    //         +mobile
-    //             display: none
-    &_fixed
-        +desktop
-            width: calc(100% - 17px)  
-            & .header-all
-                width: calc(100% - 17px)
