--- a/src/styles/generic.sass
+++ b/src/styles/generic.sass
@@ -7,11 +7,11 @@ html
     font-size: $font-size
     -moz-osx-font-smoothing: grayscale
     -webkit-font-smoothing: antialiased
-    min-width: $body-min-width
     overflow-x: hidden
     overflow-y: auto
     text-rendering: optimizeLegibility
     text-size-adjust: 100%
+    min-width: 100vw
 
 article,
 aside,
@@ -39,6 +39,7 @@ body
     font-weight: $font-weight
     line-height: $line-height
     touch-action: pan-y pan-x
+    min-width: $body-min-width
 
 // Inline
 
